# cugrad

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_workflow.yml  test_workflow.yml  workflow.yml
benchmarks/: benchmark.py
examples/: demo.ipynb  draw_graph.py  example_compute_graph  example_nn.py  example_usage.ipynb  example_usage.py  layer_compute_graph  train_housing.py  train_xor.py
include/: device.h  device_manager.h  nn.h  op.h  op_cuda.h  optimizer.h  tensor.h  value.h
src/: bindings.cpp  nn.cpp  op.cpp  op_cuda.cu  optimizer.cpp  tensor.cpp  value.cpp
tests/: draw_graph.py  test_cuda.py  test_gradient.py  test_gradient_cuda.py  test_tensor.py  test_value.py
